07/09/2019
- added unauth_action='deny' to reject unauthenticated requests rather
  than start the authorization code grant flow; see #271; based on
  suggested change by @nmaniwa

05/01/2019
- performance enhancement by caching the result of ngx.req.get_headers
  during the authenticate call.
- added another lifecycle hook that is called when the session is
  regenerated after a token refresh

04/25/2019
- improved error handling when starting session; see #264; thanks @vershnik

03/18/2019
- fixed accidental use of global variable err in revoke_tokens_on_logout;
  see #253, #254; thanks @arcivanov
- fixed a few additional cases of using global symbols detected by lualint

03/15/2019
- allow to tap into authentication workflow by providing an option
  to specify lifecycle hooks via `opts.lifecycle`

03/07/2019
- made the checks for certain HTTP headers handle the case where
  multiple headers exist; thanks @ci42

03/06/2019
- don't overwrite opts.discovery when an error occurs calling the
  discovery endpoint; see #250

02/18/2019
- release 1.7.1

12/17/2018
- don't select one of the jwt token auth methods if the required key
  material is not present; see #238

11/13/2018
- fixed a bad error return value in certain setups of
  bearer_jwt_verify; see #234; thanks @JoshTheGoldfish

11/09/2018
- added support for the client_secret_jwt authentication method; see #229

11/08/2018
- added support for the private_key_jwt authentication method; see
  #217; thanks @pamiel

11/06/2018
- make sure opts.discovery is resolved when "iss" is returned as part of the
  authorization response; see #224 ; thanks @mijohansen

11/03/2018
- we no longer verify the issuer field of the discovery document points
  to a parent URI of the discovery document's location; see #219

10/19/2018
- release 1.7.0

10/18/2018
- add token revocation support on logout (opts.revoke_tokens_on_logout)

10/16/2018
- lua-resty-openidc now creates a new session whenever the token(s)