@@ -2,6 +2,7 @@
 - added unauth_action='deny' to reject unauthenticated requests rather
   than start the authorization code grant flow; see #271; based on
   suggested change by @nmaniwa
+- read introspection_endpoint from discovery document when present; see #255
 
 05/01/2019
 - performance enhancement by caching the result of ngx.req.get_headers
